kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-system
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: kubernetes-dashboard.satoshi.tech
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 9999
